fixing desktop alignments using flexbox

--- a/social-proof-section-master/static/style.sass
+++ b/social-proof-section-master/static/style.sass
@@ -91,19 +91,27 @@ body
 
 
 @media screen and (min-width: 700px)
-    body
+    .container
+        padding-right: 9rem
+        padding-left: 9rem
     .wrapper
+        border: 1px solid red
         max-width: 100%
         display: flex
         flex-direction: column
         .social-row1, .testimonials
             display: flex
+            gap: 150px
         .testimonials
             gap: 20px
+            height: 80%
+            margin-block-start: 30px
         .social-testimoials
-            flex-basis: 330px
+            flex-basis: 33%
+            height: 40%
     .social-header
         width: 50%
+        border: 1px solid red
         .heading 
             justify-content: left
             align-items: left
@@ -115,7 +123,8 @@ body
             text-align: left
             width: 60%
     .social-rating
-        width: 28%
+        border: 1px solid red
+        width: 35%
         display: flex
         flex-direction: column
     .star-ratings
@@ -130,3 +139,7 @@ body
         align-self: center
     #indent2
         align-self: end
+    #test01
+        margin-block-start: 20px
+    #test02
+        margin-block-start: 40px
